# tandem-tango

./: .gitignore  2023-05-26_scratch.ipynb  2023-06-02_debug.ipynb  2023-06-02_runMatching_speedTest.ipynb  CDF.py  CDFSpeedTest.py  CDF_parallel.py  Dockerfile  README.md  Snakefile  batchCorr.R  environment.yml  formulaUtils.py  formulaUtilsSpeedTest.py  gammasCalc.py  msdialConvert.py  pixi.toml  plotUtils.py  pyproject.toml  runGammasCalc.py  runPlotting.py  spectrumMatching.py  spectrumMatchingSpeedTest.py  spectrumPlotting.py
.snakemake/metadata/: ZGF0YS9pbnB1dC50eHQ=  cmVzdWx0cy9vdXRwdXQudHh0
data/: output.txt
src/tandem_tango/: 2024-07-15_refactor.ipynb  2024-08-23_test_indices.ipynb  README.md  main.py  main_joblib.py  mz_sifter.py  spectrum_matching.py
src/tandem_tango/deprecated/: constants.py  plotUtils.py  runMatching.py  spectrumMatching.py
src/tandem_tango/utils/: formula_utils.py  input_types.py  metrics.py  plotting.py  reporting.py  spectrum_operations.py
tandem_tango/: 2024-07-15_refactor.ipynb  draft.py  plotUtils.py  runPlotting.py  spectrum_matching.py
tandem_tango/data/: spectrum_matching_input.tsv
tandem_tango/deprecated/: CDF_parallel.py  spectrumPlotting.py
tandem_tango/utils/: formula_utils.py  input_types.py  plotting.py  reporting.py  spectrum_operations.py
