[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tandem_tango"
version = "0.1.0"
description = "MS2 spectrum analysis and comparison"
authors = [{name = "gkreder", email = "gk@reder.io"}]
dependencies = [
    "ipykernel>=6.29.5,<6.30",
    "lxml>=5.2.2,<5.3",
    "molmass>=2024.5.24,<2024.6",
    "matplotlib>=3.9.1,<3.10",
    "more-itertools>=10.3.0,<10.4",
    "cvxpy>=1.5.2,<1.6",
    "pandas>=2.2.2,<2.3",
    "seaborn>=0.13.2,<0.14",
    "ipdb>=0.13.13,<0.14",
    "pyteomics>=4.7.2",
    "xlsxwriter>=3.2.0",
    "adjusttext>=1.2.0",
    "prefect==2.16.3"
]
